public/less/main.less
/* ... */
div.conversations.container {
  li.unread a { color: @unreadColor };
}

div.notifications.container {
  li.unread { border-right: 2px solid #f66; }
  span.message { color: #666; font-size: 0.9em; line-height: 1em; .ellipsis(); }
}

@media (min-width: @responsiveWidth) {
  div.nicks.container {
    background: #f3f3f3;
    border: 0;
    border-left: 2px solid #ccc;
    width: @nickListWidth;
    position: fixed;
    display: block;
    top: 42px;
    bottom: -1px;
    right: 0;
    z-index: 2;

    a { text-decoration: none; display: block; padding: 4px 8px; }
    a:hover { background: darken(#eee, 5%); };
  }
}

div.messages {
  padding-top: 45px;
  li {
    display: block;
    position: relative;
    padding: 3px 0;
    overflow: hidden;

    img { float: left; }
    h3 { font-size: 1em; color: #467; line-height: 1.2em; margin: 0; }
    h3, div { margin-left: 50px; }
    div.question { margin-left: 0; }
    span.timestamp {
      letter-spacing: -1px;
      position: absolute;
      top: 2px;
      right: 2px;
      color: #999;
    }
  }

  li.highlight { background: #fee; }
  li.same-nick { padding-top: 0; }
  li.message .action { font-style: italic; }
  li.message .embed, li.message .embed img { max-height: 220px; }
  li.message .embed img { border: 2px solid #bbb; .border-radius(20px); margin: 8px 0; }
  li.nick-change, li.nick-joined, li.nick-parted, li.topic, li.whois, li.notice { color: #555; }
}

.with-nick-list {
  div.messages { margin-right: @nickListWidth; }
  footer form { margin-right: @nickListWidth; }
}

div.goto-bottom a {
  display: none;
  background: #fafafa;
  color: #333;
  position: fixed;
  right: 6px;
  bottom: 42px;
  padding: 5px;
  z-index: 100;
  border: 1px solid #ccc;
  .border-radius(4px);
  .opacity(0.8);
}

/*
 * Settings
 */
.settings {
  padding-top: 50px;
  h2 select { font-size: 18px; font-weight: bold; }
}

/*
 * Landing page
 */
.landing-page {
  @loginBackground: darken(#fff, 2%);
  margin: auto;
  width: 800px;
  img {
    margin: 2em 40px;
    border: 1px solid #ccc;
    .box-shadow(0 0px 4px 2px rgba(180, 180, 180, 0.5));
  }
  nav, .login, .register, .about {
    width: 700px;
    margin: 2em auto;
    overflow: hidden;
  }
  nav {
    margin-bottom: 0;
    a.button, a.button.active {
      background: @loginBackground;
      margin-right: 10px;
      display: block;
      float: left;
    }
    a.active {
      border: @buttonBorderHover;
      border-bottom: 0;
      position: relative;
      z-index: 5;
    }
  }
  .row { padding: 0; }
  .login, .register {
    background: @loginBackground;
    border: @buttonBorderHover;
    margin-top: -4px;
    display: none;
    padding: @bodyGutter;
    position: relative;
    h1 { display: none; }
  }
  .about { padding-bottom: 100px; }
}

@media (max-width: @responsiveWidth) {
  footer, nav.bar, .row { padding: 0; }
  nav.bar .right { right: 0; }
  div.messages { margin-right: 0; }

  .with-nick-list {
    a.nicks.toggler { display: block; }
    div.messages, footer form { margin-right: 0; }
    div.nicks.container { display: none; }
  }

  div.wrapper {
    margin-bottom: -42px;
    div.clear { height: 42px; }
  }

  footer {
    height: 42px;
    input, input:focus {
      border-bottom: 0;
      border-right: 0;
      border-left: 0;
    }
  }

  .landing-page {
    width: 100%;
    img { margin: 2em 0; }
    nav, .login, .register, .about { width: 100% };
    .row { padding-left: 10px; padding-right: 10px; }
  }

  dl {
    dt {
      float: none;
      clear: left;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
    dd { margin-left: @bodyGutter; }
  }
}

/*!
 *  Font Awesome 3.0.2
 *  -------------------------------------------------------
 *  - The Font Awesome font is licensed under the SIL Open Font License - http://scripts.sil.org/OFL
 *  - Font Awesome CSS, LESS, and SASS files are licensed under the MIT License -
 *    http://opensource.org/licenses/mit-license.html
 *  - The Font Awesome pictograms are licensed under the CC BY 3.0 License - http://creativecommons.org/licenses/by/3.0/
 *  - Attribution is no longer required in Font Awesome 3.0, but much appreciated:
 *    "Font Awesome by Dave Gandy - http://fortawesome.github.com/Font-Awesome"
 */

@FontAwesomePath:   "../font";
@borderColor:       #eee;
@iconMuted:         #eee;
.border-radius(@radius) { -webkit-border-radius: @radius; -moz-border-radius: @radius; border-radius: @radius; }

@font-face {
  font-family: 'FontAwesome';
  src: url('@{FontAwesomePath}/fontawesome-webfont.eot?v=3.0.1');
  src: url('@{FontAwesomePath}/fontawesome-webfont.eot?#iefix&v=3.0.1') format('embedded-opentype'),
    url('@{FontAwesomePath}/fontawesome-webfont.woff?v=3.0.1') format('woff'),
    url('@{FontAwesomePath}/fontawesome-webfont.ttf?v=3.0.1') format('truetype');
//  url('@{FontAwesomePath}/fontawesome-webfont.svg#fontawesomeregular?v=3.0.1') format('svg');
//  src: url('@{FontAwesomePath}/FontAwesome.otf') format('opentype');
  font-weight: normal;
  font-style: normal;
}

/*  Font Awesome styles
    ------------------------------------------------------- */
[class^="icon-"],
[class*=" icon-"] {
  font-family: FontAwesome;
  font-weight: normal;
  font-style: normal;
  text-decoration: inherit;
  -webkit-font-smoothing: antialiased;

/* sprites.less reset */
  display: inline;
  width: auto;
  height: auto;
  line-height: normal;
  vertical-align: baseline;
  background-image: none;
  background-position: 0% 0%;
  background-repeat: repeat;
  margin-top: 0;
}

[class^="icon-"]:before,
[class*=" icon-"]:before {
  text-decoration: inherit;
  display: inline-block;
  speak: none;
}

/* makes sure icons active on rollover in links */
a {
  [class^="icon-"],
  [class*=" icon-"] {
    display: inline-block;
  }
}

/* makes the font 33% larger relative to the icon container */
.icon-large:before {
  vertical-align: -10%;
  font-size: 4/3em;
}
/* ... */

